[project]
authors = [{name = "Thomas", email = "mulvaney@mailbox.org"}]
dependencies = []
name = "itplz"
requires-python = ">= 3.11"
version = "0.1.0"
license = "MIT" # Example for MIT license

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
itplz = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.target.linux-64.dependencies]
clang = ">=22.1.5,<23"

[project.scripts]
itplz = "itplz.cli:main"
